--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
 		"eslint:check": "eslint .",
 		"lint": "npm run eslint:check && npm run prettier:check",
 		"lint:fix": "npm run eslint:check && npm run prettier:fix",
-		"prepare": "husky install",
+		"prepare": "husky",
 		"start": "node src/index.js",
 		"dev": "nodemon src/index.js"
 	},
@@ -45,7 +45,7 @@
 		"commitizen": "^4.3.0",
 		"cz-conventional-changelog": "^3.3.0",
 		"eslint": "^8.57.0",
-		"husky": "^8.0.3",
+		"husky": "^9.0.11",
 		"lint-staged": "^15.2.2",
 		"nodemon": "^3.1.0",
 		"prettier": "^3.2.5"
