--- a/configs/linting/.eslintrc.json
+++ b/configs/linting/.eslintrc.json
@@ -1,7 +1,7 @@
 {
 	"parser": "@babel/eslint-parser",
 	"parserOptions": {
-		"ecmaVersion": 2023,
+		"ecmaVersion": "latest",
 		"sourceType": "module",
 		"ecmaFeatures": {
 			"jsx": true
