--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "base-js-template",
+	"name": "nodejs-template",
 	"version": "1.0.0",
 	"description": "",
 	"main": "index.js",
@@ -11,8 +11,8 @@
 		"lint": "npm run eslint:check && npm run prettier:check",
 		"lint:fix": "npm run eslint:check && npm run prettier:fix",
 		"prepare": "husky",
-		"start": "node src/index.js",
-		"dev": "nodemon src/index.js"
+		"start": "node --no-warnings=ExperimentalWarning src/index.js",
+		"dev": "nodemon --no-warnings=ExperimentalWarning src/index.js"
 	},
 	"config": {
 		"commitizen": {
@@ -53,12 +53,12 @@
 	"type": "module",
 	"repository": {
 		"type": "git",
-		"url": "https://github.com/Bekert/project-base.git"
+		"url": "https://github.com/Bekert/nodejs-template"
 	},
 	"author": "Bekert",
 	"license": "MIT",
 	"bugs": {
-		"url": "https://github.com/Bekert/project-base/issues"
+		"url": "https://github.com/Bekert/nodejs-template/issues"
 	},
-	"homepage": "https://github.com/Bekert/project-base"
+	"homepage": "https://github.com/Bekert/nodejs-template"
 }
