--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -8,7 +8,7 @@
 	"jsxSingleQuote": true,
 	"trailingComma": "none",
 	"bracketSpacing": true,
-	"jsxBracketSameLine": false,
+	"bracketSameLine": false,
 	"arrowParens": "avoid",
 	"endOfLine": "lf"
 }
