--- a/package.json
+++ b/package.json
@@ -35,9 +35,11 @@
 		"@babel/plugin-proposal-json-modules": "^7.24.3",
 		"@commitlint/cli": "^19.3.0",
 		"@commitlint/config-conventional": "^19.2.2",
+		"@eslint/js": "^9.3.0",
 		"commitizen": "^4.3.0",
 		"cz-conventional-changelog": "^3.3.0",
 		"eslint": "^9.3.0",
+		"globals": "^15.2.0",
 		"husky": "^9.0.11",
 		"lint-staged": "^15.2.2",
 		"nodemon": "^3.1.0",
