--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
 		"@commitlint/cli": "^19.3.0",
 		"@commitlint/config-conventional": "^19.2.2",
 		"@eslint/js": "^9.3.0",
+		"@stylistic/eslint-plugin": "^2.1.0",
 		"commitizen": "^4.3.0",
 		"cz-conventional-changelog": "^3.3.0",
 		"eslint": "^9.3.0",
